--- a/01-basic-drawing/demos/frameloop/index.html
+++ b/01-basic-drawing/demos/frameloop/index.html
@@ -1,16 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js'></script>
-</head>
-
-<body>
-  <main id="p5code"></main>
-  <script src='js/script.js'></script>
-</body>
-
+  <body>
+    <main id="p5code"></main>
+    <script src="js/script.js"></script>
+  </body>
 </html>
