--- a/13-object-oriented-2/exercises/final/03-worm/index.html
+++ b/13-object-oriented-2/exercises/final/03-worm/index.html
@@ -9,6 +9,7 @@
 
   <body>
     <main></main>
+    <script src="./js/worm.js"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
