--- a/13-object-oriented-2/exercises/final/03-worm/index.html
+++ b/13-object-oriented-2/exercises/final/03-worm/index.html
@@ -1,15 +1,19 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sketch</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
-  </head>
 
-  <body>
-    <main></main>
-    <script src="./js/worm.js"></script>
-    <script src="./js/script.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sketch</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
+</head>
+
+<body>
+  <main></main>
+  <script src="./js/worm.js"></script>
+  <script src="./js/squareWorm.js"></script>
+  <script src="./js/roundWorm.js"></script>
+  <script src="./js/script.js"></script>
+</body>
+
 </html>
