--- a/14-object-communication/exercises/final/04-circle-packing/index.html
+++ b/14-object-communication/exercises/final/04-circle-packing/index.html
@@ -5,14 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sketch</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/p5.js"></script>
 </head>
 
 <body>
   <main></main>
-  <script src="./js/worm.js"></script>
-  <script src="./js/squareWorm.js"></script>
-  <script src="./js/roundWorm.js"></script>
+  <script src="./js/circle.js"></script>
   <script src="./js/script.js"></script>
 </body>
 
