--- a/14-object-communication/exercises/final/03-formation/index.html
+++ b/14-object-communication/exercises/final/03-formation/index.html
@@ -10,9 +10,7 @@
 
 <body>
   <main></main>
-  <script src="./js/worm.js"></script>
-  <script src="./js/squareWorm.js"></script>
-  <script src="./js/roundWorm.js"></script>
+  <script src="./js/bubble.js"></script>
   <script src="./js/script.js"></script>
 </body>
 
