--- a/template-assignment-opposites/index.html
+++ b/template-assignment-opposites/index.html
@@ -1,17 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.1/lib/p5.min.js"></script>
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Opposites</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.jsdelivr.net/npm/p5@1.11.1/lib/p5.min.js"></script>
-  <link rel="stylesheet" href="css/style.css">
-  <title>Opposites</title>
-</head>
-
-<body>
-
-  <script src="js/script.js"></script>
-</body>
-
+  <body>
+    <script src="js/script.js"></script>
+  </body>
 </html>
